XWIKI-23433: Provide frontend check of links (#4645)
  * Add new properties to enable or not frontend link checks and
    whitelist of links
  * Provide script services to access the data from the configuration
  * Add new mechanism allowing to check links when clicking on them
    based on the configuration
  * Apply suggestions from code review
  * Fix naming of allowed urls
  * Provide integration test
  * Add proper since information

---------

Co-authored-by: Michael Hamann <michael.hamann@xwiki.com>
Co-authored-by: Manuel Leduc <manuel.leduc@xwiki.com>
(cherry picked from commit 7b5a4f8c34d9b1da3d966e17f7dbccabac448e75)